# move-mutation-tools

./: Cargo.toml
move-mutation-test/: Cargo.toml
move-mutation-test/src/: cli.rs  mutation_test.rs
move-mutation-test/tests/: integration_tests.rs
move-mutator/src/: cli.rs  mutate.rs  operator_filter.rs
move-mutator/src/operators/: mod.rs  resource.rs  unary.rs
move-mutator/tests/: basic_tests.rs
move-mutator/tests/move-assets/resource_and_negate/: Move.toml
move-mutator/tests/move-assets/resource_and_negate/sources/: ArithNegate.move  ResourceOps.move
move-spec-test/: Cargo.toml
move-spec-test/src/: prover.rs
